--- a/index.html
+++ b/index.html
@@ -1,13 +1,13 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
   <head>
+    <style media="screen">
+      h1  {color: blue;}
+    </style>
     <meta charset="utf-8">
     <title></title>
   </head>
   <body>
-    <style green text>
-      .text-green
-    </style>
     <h1>
       <center>Alexander Hamilton</center>
     </h1>
