Updated alexander hamilton resume

--- a/index.html
+++ b/index.html
@@ -1,13 +1,12 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
   <head>
-    <style media="screen">
-      h1  {color: blue;}
-    </style>
     <meta charset="utf-8">
     <title></title>
-  </head>
+    <link rel="stylesheet" href="style.css">
   <body>
+    <header>
+    </header>
     <h1>
       <center>Alexander Hamilton</center>
     </h1>
@@ -45,5 +44,7 @@
     <p>- Studied in Columbia College</p>
     <p>- Self-taught in law (passed the oral bar exam)</p>
     <iframe width="560" height="315" src="https://www.youtube.com/embed/DPgE7PNzXag" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+    <footer>
+    </footer>
   </body>
 </html>
